--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="#" class="logo">
-            <img src="EMO_LOL_02.avif" alt="Minecraft" id="imagen">
+            <img src="EMO_LOL_02.avif" alt="Minecraft">
             <h2 class="nombreEmpresa"> Nombre Empresa</h2>
         </a>
         <nav>
