--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
         </nav>
     </header>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, numquam repudiandae dignissimos dolores officia voluptatum.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat, nemo?</p>
 </body>
 </html>
